fixed header css collapsing problems

--- a/app_server/static/css/explore-learn.css
+++ b/app_server/static/css/explore-learn.css
@@ -14,7 +14,7 @@ body {
 
 /* App header tools */
 #app-header-tools{
-   min-width: 26em;
+   min-width: 500px;
    width: 40%;
    cursor: default;
    text-align: center;
