--- a/app_server/static/css/standard.css
+++ b/app_server/static/css/standard.css
@@ -67,11 +67,6 @@ a.expand-collapse-link:hover{
 /* ---------->>> Layout Styles <<<--------------------*/
 /* ---------------------------------------------------*/
 
-/* #header-wrapper{ */
-/*     display: table; */
-/*     width: 100%; */
-/* } */
-
 .header-bar {
     height: 1.6em;		 
     width: 100%;
@@ -79,8 +74,9 @@ a.expand-collapse-link:hover{
     overflow: hidden;
     font-size: 1.1em;
     position: relative;
-    z-index: 1000;
+    z-index: 10;
     display: table;
+    overflow: scroll;
 }
 
 .header-content-wrapper{
@@ -122,7 +118,7 @@ a.expand-collapse-link:hover{
 }
 
 #header-search-img-el{
-    min-width: 14em;
+    min-width: 370px;
     width: 30%;
 }
 
@@ -132,12 +128,6 @@ a.expand-collapse-link:hover{
     text-align: right;
     font-size: 0.72em;
 }
-/* /\* so element within the header can be vertically centered *\/ */
-/* .header-inner-wrap{ */
-/*     height: 100%; */
-/*     width: 100%; */
-/*     display: table-cell; */
-/* } */
 
 #main {
     clear: both;
